# llm-recommender-efficacy-84bb-claude

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_search_results/: large_language_models_for_music_recommendation_systems_20260426_032957.jsonl  zero-shot_LLM_recommender_system_evaluation_20260426_033107.jsonl
papers/: README.md
papers/pages/: 2305.08845_Hou_LLMs_Zero_Shot_Rankers_manifest.txt  2307.14225_Sanner_LLM_Cold_Start_manifest.txt  2502.13713_Doh_TalkPlay_manifest.txt  2507.16708_Sguerra_Biases_LLM_Music_Profiles_manifest.txt  2508.11671_Hudac_LLM_Agents_Music_vs_CBF_manifest.txt  2511.16478_Epure_MusicRec_LLMs_Challenges_manifest.txt
results/: config.json  cost_latency.csv  cost_per_method.csv  hallucination.csv  hallucination_summary.json  llm_runs.json  per_user_metrics.csv  personalization_gain.csv  run_variance.csv  summary_stats.csv  wilcoxon_tests.csv
src/: analyze.py  baselines.py  build_pools.py  data_loader.py  extra_analysis.py  llm_ranker.py  metrics.py  run_experiment.py  run_hallucination.py
