[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for LLM music recommendation experiments"
requires-python = ">=3.10"
dependencies = [
    "arxiv>=3.0.0",
    "datasets>=4.8.4",
    "httpx>=0.28.1",
    "matplotlib>=3.10.9",
    "openai>=2.32.0",
    "pandas>=2.3.3",
    "pyarrow>=24.0.0",
    "pypdf>=6.10.2",
    "requests>=2.33.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "tzdata>=2026.2",
]
